[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/ui/ui.gd" type="Script" id=1]
[ext_resource path="res://assets/montserrat.otf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[node name="UI" type="CanvasLayer" groups=[
"ui",
]]
script = ExtResource( 1 )

[node name="timer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="VContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HContainerScore" type="HBoxContainer" parent="VContainer"]
margin_right = 193.0
margin_bottom = 40.0

[node name="scoreLabel" type="Label" parent="VContainer/HContainerScore"]
margin_right = 97.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )
text = "score:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score" type="Label" parent="VContainer/HContainerScore"]
margin_left = 101.0
margin_right = 124.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 3 )
text = "0"

[node name="HContainerTime" type="HBoxContainer" parent="VContainer"]
margin_top = 44.0
margin_right = 193.0
margin_bottom = 84.0

[node name="timeLeftLabel" type="Label" parent="VContainer/HContainerTime"]
margin_right = 148.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 4 )
text = "time left:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="timeLeft" type="Label" parent="VContainer/HContainerTime"]
margin_left = 152.0
margin_right = 193.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
text = "30"
__meta__ = {
"_edit_use_anchors_": false
}
